--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     }
 }
 
-.chip,.suggestion-main{background-color:rgba(30,41,59,.4);border:1px solid #475569;border-radius:.25rem;text-transform:uppercase;font-weight:700;color:#fff;white-space:nowrap;user-select:none}
+.chip,.suggestion-main{background-color:#1d293d;border:1px solid #475569;border-radius:.25rem;text-transform:uppercase;font-weight:700;color:#fff;white-space:nowrap;user-select:none}
 .chip{padding:.35rem .75rem;font-size:.6rem;letter-spacing:.025em}
 .suggestion-main{padding:.5rem .75rem;font-size:.9rem;letter-spacing:.05em;text-align:center;box-shadow:0 0 10px 2px rgba(0, 0, 0, 0.6)}
 
