--- a/tailwind.css
+++ b/tailwind.css
@@ -22,6 +22,7 @@
     --color-slate-400: oklch(70.4% 0.04 256.788);
     --color-slate-600: oklch(44.6% 0.043 257.281);
     --color-slate-700: oklch(37.2% 0.044 257.287);
+    --color-slate-800: oklch(27.9% 0.041 260.031);
     --color-slate-900: oklch(20.8% 0.042 265.755);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-neutral-50: oklch(98.5% 0 0);
@@ -623,11 +624,8 @@
   .bg-slate-700 {
     background-color: var(--color-slate-700);
   }
-  .bg-slate-700\/70 {
-    background-color: color-mix(in srgb, oklch(37.2% 0.044 257.287) 70%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-slate-700) 70%, transparent);
-    }
+  .bg-slate-800 {
+    background-color: var(--color-slate-800);
   }
   .bg-slate-900 {
     background-color: var(--color-slate-900);
@@ -777,6 +775,9 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
   .text-gray-500\/60 {
     color: color-mix(in srgb, oklch(55.1% 0.027 264.364) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -813,8 +814,8 @@
   .uppercase {
     text-transform: uppercase;
   }
-  .opacity-\[\.05\] {
-    opacity: .05;
+  .opacity-\[\.07\] {
+    opacity: .07;
   }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
@@ -1034,7 +1035,7 @@
   }
 }
 .chip,.suggestion-main {
-  background-color: rgba(30,41,59,.4);
+  background-color: #1d293d;
   border: 1px solid #475569;
   border-radius: .25rem;
   text-transform: uppercase;
