--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -244,6 +244,9 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-2 {
+    top: calc(var(--spacing) * 2);
+  }
   .top-2\.5 {
     top: calc(var(--spacing) * 2.5);
   }
@@ -442,11 +445,20 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .shrink-0 {
     flex-shrink: 0;
   }
+  .flex-grow {
+    flex-grow: 1;
+  }
   .grow {
     flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .origin-center {
     transform-origin: center;
@@ -492,6 +504,9 @@
   }
   .flex-nowrap {
     flex-wrap: nowrap;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .items-center {
     align-items: center;
@@ -570,11 +585,17 @@
   .border-\[\#475569\] {
     border-color: #475569;
   }
+  .border-orange-300 {
+    border-color: var(--color-orange-300);
+  }
   .border-orange-300\/60 {
     border-color: color-mix(in srgb, oklch(83.7% 0.128 66.29) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-orange-300) 60%, transparent);
     }
+  }
+  .border-orange-400 {
+    border-color: var(--color-orange-400);
   }
   .border-orange-400\/60 {
     border-color: color-mix(in srgb, oklch(75% 0.183 55.934) 60%, transparent);
@@ -582,11 +603,17 @@
       border-color: color-mix(in oklab, var(--color-orange-400) 60%, transparent);
     }
   }
+  .border-orange-500 {
+    border-color: var(--color-orange-500);
+  }
   .border-orange-500\/60 {
     border-color: color-mix(in srgb, oklch(70.5% 0.213 47.604) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-orange-500) 60%, transparent);
     }
+  }
+  .border-orange-600 {
+    border-color: var(--color-orange-600);
   }
   .border-orange-600\/60 {
     border-color: color-mix(in srgb, oklch(64.6% 0.222 41.116) 60%, transparent);
@@ -594,11 +621,17 @@
       border-color: color-mix(in oklab, var(--color-orange-600) 60%, transparent);
     }
   }
+  .border-orange-700 {
+    border-color: var(--color-orange-700);
+  }
   .border-orange-700\/60 {
     border-color: color-mix(in srgb, oklch(55.3% 0.195 38.402) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-orange-700) 60%, transparent);
     }
+  }
+  .border-orange-800 {
+    border-color: var(--color-orange-800);
   }
   .border-orange-800\/60 {
     border-color: color-mix(in srgb, oklch(47% 0.157 37.304) 60%, transparent);
@@ -606,17 +639,26 @@
       border-color: color-mix(in oklab, var(--color-orange-800) 60%, transparent);
     }
   }
+  .border-red-700 {
+    border-color: var(--color-red-700);
+  }
   .border-red-700\/60 {
     border-color: color-mix(in srgb, oklch(50.5% 0.213 27.518) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-red-700) 60%, transparent);
     }
   }
+  .border-sky-600 {
+    border-color: var(--color-sky-600);
+  }
   .border-sky-600\/60 {
     border-color: color-mix(in srgb, oklch(58.8% 0.158 241.966) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       border-color: color-mix(in oklab, var(--color-sky-600) 60%, transparent);
     }
+  }
+  .border-sky-700 {
+    border-color: var(--color-sky-700);
   }
   .border-sky-700\/60 {
     border-color: color-mix(in srgb, oklch(50% 0.134 242.749) 60%, transparent);
@@ -633,6 +675,9 @@
   .bg-\[rgba\(30\,41\,59\,0\.4\)\] {
     background-color: rgba(30,41,59,0.4);
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
   .bg-black\/70 {
     background-color: color-mix(in srgb, #000 70%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -642,11 +687,17 @@
   .bg-current {
     background-color: currentcolor;
   }
+  .bg-orange-300 {
+    background-color: var(--color-orange-300);
+  }
   .bg-orange-300\/60 {
     background-color: color-mix(in srgb, oklch(83.7% 0.128 66.29) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-orange-300) 60%, transparent);
     }
+  }
+  .bg-orange-400 {
+    background-color: var(--color-orange-400);
   }
   .bg-orange-400\/60 {
     background-color: color-mix(in srgb, oklch(75% 0.183 55.934) 60%, transparent);
@@ -654,11 +705,17 @@
       background-color: color-mix(in oklab, var(--color-orange-400) 60%, transparent);
     }
   }
+  .bg-orange-500 {
+    background-color: var(--color-orange-500);
+  }
   .bg-orange-500\/60 {
     background-color: color-mix(in srgb, oklch(70.5% 0.213 47.604) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-orange-500) 60%, transparent);
     }
+  }
+  .bg-orange-600 {
+    background-color: var(--color-orange-600);
   }
   .bg-orange-600\/60 {
     background-color: color-mix(in srgb, oklch(64.6% 0.222 41.116) 60%, transparent);
@@ -666,11 +723,17 @@
       background-color: color-mix(in oklab, var(--color-orange-600) 60%, transparent);
     }
   }
+  .bg-orange-700 {
+    background-color: var(--color-orange-700);
+  }
   .bg-orange-700\/60 {
     background-color: color-mix(in srgb, oklch(55.3% 0.195 38.402) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-orange-700) 60%, transparent);
     }
+  }
+  .bg-orange-800 {
+    background-color: var(--color-orange-800);
   }
   .bg-orange-800\/60 {
     background-color: color-mix(in srgb, oklch(47% 0.157 37.304) 60%, transparent);
@@ -678,17 +741,26 @@
       background-color: color-mix(in oklab, var(--color-orange-800) 60%, transparent);
     }
   }
+  .bg-red-700 {
+    background-color: var(--color-red-700);
+  }
   .bg-red-700\/60 {
     background-color: color-mix(in srgb, oklch(50.5% 0.213 27.518) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-red-700) 60%, transparent);
     }
   }
+  .bg-sky-600 {
+    background-color: var(--color-sky-600);
+  }
   .bg-sky-600\/60 {
     background-color: color-mix(in srgb, oklch(58.8% 0.158 241.966) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-sky-600) 60%, transparent);
     }
+  }
+  .bg-sky-700 {
+    background-color: var(--color-sky-700);
   }
   .bg-sky-700\/60 {
     background-color: color-mix(in srgb, oklch(50% 0.134 242.749) 60%, transparent);
@@ -730,11 +802,19 @@
     --tw-gradient-position: to bottom right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .from-red-500 {
+    --tw-gradient-from: var(--color-red-500);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .from-red-500\/60 {
     --tw-gradient-from: color-mix(in srgb, oklch(63.7% 0.237 25.331) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-gradient-from: color-mix(in oklab, var(--color-red-500) 60%, transparent);
     }
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-red-600 {
+    --tw-gradient-to: var(--color-red-600);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-red-600\/60 {
@@ -881,6 +961,9 @@
   .whitespace-nowrap {
     white-space: nowrap;
   }
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
   .text-gray-500\/60 {
     color: color-mix(in srgb, oklch(55.1% 0.027 264.364) 60%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
@@ -889,6 +972,9 @@
   }
   .text-neutral-50 {
     color: var(--color-neutral-50);
+  }
+  .text-sky-50 {
+    color: var(--color-sky-50);
   }
   .text-sky-50\/80 {
     color: color-mix(in srgb, oklch(97.7% 0.013 236.62) 80%, transparent);
@@ -935,11 +1021,18 @@
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .ring-white {
+    --tw-ring-color: var(--color-white);
+  }
   .ring-white\/15 {
     --tw-ring-color: color-mix(in srgb, #fff 15%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       --tw-ring-color: color-mix(in oklab, var(--color-white) 15%, transparent);
     }
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .backdrop-blur {
     --tw-backdrop-blur: blur(8px);
@@ -948,6 +1041,10 @@
   }
   .backdrop-blur-sm {
     --tw-backdrop-blur: blur(var(--blur-sm));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -983,6 +1080,13 @@
     &:hover {
       @media (hover: hover) {
         border-radius: var(--radius-lg);
+      }
+    }
+  }
+  .hover\:border-slate-500 {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-slate-500);
       }
     }
   }
@@ -1416,6 +1520,11 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-backdrop-blur {
   syntax: "*";
   inherits: false;
@@ -1489,6 +1598,7 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-backdrop-blur: initial;
       --tw-backdrop-brightness: initial;
       --tw-backdrop-contrast: initial;
